--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -140,6 +140,9 @@
                         } else {
                             alert(arg.message);
                         }
+                    },
+                    error: function (arg) {
+                        alert(arg.message());
                     }
                 })
             })
