--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -6,15 +6,14 @@
     <title th:text="快艇骰子-房间号+${session.room.roomId}">Title</title>
     <script src="/bootstrap-3.4.1-dist/js/sockjs.min.js"></script>
     <script src="/bootstrap-3.4.1-dist/js/stomp.js"></script>
-    <script src="/bootstrap-3.4.1-dist/js/jquery-3.6.0.min.js"
-            integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
+    <script src="/bootstrap-3.4.1-dist/js/jquery-3.6.0.min.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="/bootstrap-3.4.1-dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <script src="/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
     <script src="/bootstrap-3.4.1-dist/js/template.js"></script>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap.min.css">
     <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/all.min.css">
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/quick-website.css">
     <script type="text/html" id="seat-html" th:inline="javascript">
@@ -75,7 +74,7 @@
         function connect() {
             var socket = new SockJS([[${session.wsUrl}]]);
             stompClient = Stomp.over(socket);
-            stompClient.connect({"Authorization": JSON.stringify([[${session.user}]]),'room': JSON.stringify([[${session.room}]])}, function (frame) {
+            stompClient.connect({"user": JSON.stringify([[${session.user}]]),'room': JSON.stringify([[${session.room}]])}, function (frame) {
                 //setConnected(true);
                 console.log('Connected: ' + frame);
                 stompClient.subscribe('/topic/'+[[${session.room.roomId}]], function (response) {
