--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -19,10 +19,10 @@
     <script type="text/html" id="seat-html" th:inline="javascript">
         <!-- Card -->
         <div class="col-md-2">
-            <div class="card" id="{{content.seat}}">
+            <div class="card" id="{{content.id}}">
                 <div class="card-body pb-1">
                     <div class="pt-1 pb-1">
-                        <img id="img-{{content.seat}}" src="/bootstrap-3.4.1-dist/images/umr.webp" class="img-fluid img-center" style="height: 100px;" alt="头像">
+                        <img id="img-{{content.id}}" src="/bootstrap-3.4.1-dist/images/umr.webp" class="img-fluid img-center" style="height: 100px;" alt="头像">
                     </div>
                     <h5 class="h4 lh-130 mb-1 text-center">{{content.user.realname}}</h5>
                     <p class="text-muted mb-0 text-center">
@@ -166,6 +166,7 @@
                                 document.getElementById(i.toString()).style.backgroundColor = "#FFF";
                             }
                             document.getElementById(parse.seat.toString()).style.backgroundColor = "#FFEEBB";
+                            resetDice();
                         }
                         //收到有人断线的消息
                         if(parse.code === 107){
@@ -187,20 +188,17 @@
                     if(parse.code === 104){
                         document.getElementById("start-game").disabled = false;
                     }
-                    //询问投骰子
-                    if(parse.code === 3){
-                        playDice.disabled = false;
-                        playDice.innerText = "投掷骰子*" + parse.content;
-                        resetDice();
-                    }
-                    //返回投骰子后的结果
-                    if(parse.code === 5){
+                    //询问投骰子还是选择分数
+                    if(parse.code === 6){
                         playDice.disabled = parse.content === 0;
-                        for (var i=0; i < 12; i++) {
-                            selectScore(i, playerScoreIdList[parse.seat][i], parse.seat);
-                        }
-                        for (var i=0; i < diceIdList.length; i++){
-                            lockDice(i,diceIdList[i]);
+                        playDice.innerText = "投掷骰子*" + parse.content;
+                        if(parse.content != 3){
+                            for (var i=0; i < 12; i++) {
+                                selectScore(i, playerScoreIdList[parse.seat][i], parse.seat);
+                            }
+                            for (var i=0; i < diceIdList.length; i++){
+                                lockDice(i,diceIdList[i]);
+                            }
                         }
                     }
                 })
