--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="快艇骰子-房间号+${session.room.roomId}">Title</title>
-    <script src="/bootstrap-3.4.1-dist/js/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="/bootstrap-3.4.1-dist/js/stomp.js"></script>
     <script src="/bootstrap-3.4.1-dist/js/jquery-3.6.0.min.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
