--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -149,7 +149,7 @@
                         //收到游戏结束
                         if(parse.code === 111){
                             if(parse.content.winner != null){
-                                alert("赢家为"+parse.content.winner.userVo.realname+"！");
+                                alert("赢家为"+parse.content.winner.user.realname+"！");
                             } else {
                                 alert("平局！");
                             }
