--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/all.min.css">
-    <link rel="stylesheet" href="/bootstrap-3.4.1-dist/css/quick-website.css">
+    <link rel="stylesheet" href="https://quick.bootmb.com/assets/css/quick-website.css">
     <script type="text/html" id="user_info" th:inline="javascript">
         <div class="card-body px-md-5 py-5">
             <div class="mb-5">
