--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -120,7 +120,6 @@
                         seatDown(parse.content);
                     }
                     var ids = playerScoreIdList[parse.seat];
-                    var playDice = document.getElementById("playDice");
                     //收到广播开始游戏
                     if(parse.code === 104){
 
@@ -129,13 +128,14 @@
                     if(parse.code === 4){
                         setTimeout(()=>{
                             clearInterval(diceTaskId);
-                            populateScores(parse.content);
+                            populateScores(parse.content, ids);
+                            document.getElementById("playDice").innerText = "投掷骰子*" + parse.content.playTimes;
                         },1500);
                     }
                     //收到广播的选择分数结果
                     if(parse.code === 5){
                         resetDice();
-                        populateSelectScores(parse.content);
+                        populateSelectScores(parse.content, ids);
                     }
                     //收到游戏结束
                     if(parse.code === 111){
@@ -207,27 +207,6 @@
                             }
                         }
                     }
-                    //收到重连
-                    if(parse.code === 108){
-                        resetDice();
-                        for (let i = 0; i < parse.content.playerList.length; i++) {
-                            var player = parse.content.playerList[i];
-                            //是否开启投骰子按钮
-                            if(player.user.id === [[${session.user.id}]] && player.playTimes > 0){
-                                document.getElementById("playDice").disabled = false;
-                            }
-                            //展示玩家
-                            seatDown(player);
-                            //展示分数和骰子
-                            if(player.currentScores != null){
-                                populateScores(player);
-                            } else {
-                                populateScores(player.scores);
-                            }
-                        }
-                        //换人标记
-                        document.getElementById(parse.content.currentPlayer.id.toString()).style.backgroundColor = "#FFEEBB";
-                    }
                 });
                 stompClient.subscribe('/user/'+[[${session.user.id}]]+'/'+[[${session.room.roomId}]], function (response){
                     var parse = JSON.parse(response.body);
@@ -241,20 +220,50 @@
                     }
                     //询问投骰子还是选择分数
                     if(parse.code === 6){
-                        var times = parse.content.times;
-                        playDice.disabled = times === 0;
+                        var times = parse.content.playTimes;
+                        playDice.disabled = times <= 0;
                         playDice.innerText = "投掷骰子*" + times;
                         if(times != 3){
-                            var haveScores = parse.content.haveScores;
-                            for (var i=0; i < 12; i++) {
-                                if(haveScores[i] === -1){
-                                    selectScore(i, playerScoreIdList[parse.seat][i], parse.seat);
-                                }
-                            }
-                            for (var i=0; i < diceIdList.length; i++){
-                                lockDice(i,diceIdList[i]);
+                            enable(parse.content.scores, parse.content.id);
+                        }
+                    }
+                    //收到重连
+                    if(parse.code === 108){
+                        resetDice();
+                        let room = parse.content;
+                        messageId = room.maxMessageId;
+                        let currentPlayer = null;
+                        for (let i = 0; i < room.playerList.length; i++) {
+                            let player = room.playerList[i];
+                            //展示玩家
+                            seatDown(player);
+                            let ids = playerScoreIdList[player.id];
+                            //展示分数
+                            populateSelectScores(player.scores, ids);
+                            //获取当前进行回合的玩家
+                            if(player.id === room.currentSeat){
+                                currentPlayer = player;
                             }
                         }
+                        //如果是正在选择分数的阶段
+                        if(currentPlayer.playTimes < 3){
+                            populateScores(currentPlayer, playerScoreIdList[currentPlayer.id]);
+                            enable(currentPlayer.scores, currentPlayer.id);
+                        }
+                        //可以开始标记
+                        if(room.roomStatus === 1 && room.owner.id === [[${session.user.id}]]){
+                            document.getElementById("start-game").disabled = false;
+                        }
+                        //换人标记
+                        if(room.roomStatus === 2){
+                            document.getElementById(room.currentSeat.toString()).style.backgroundColor = "#FFEEBB";
+                        }
+                        //是否开启投骰子按钮
+                        if([[${session.user.id}]] === currentPlayer.user.id && currentPlayer.playTimes > 0){
+                            document.getElementById("playDice").disabled = false;
+                        }
+                        //展示骰子次数
+                        document.getElementById("playDice").innerText = "投掷骰子*" + currentPlayer.playTimes;
                     }
                 })
             },{});
@@ -262,12 +271,12 @@
 
         function seatDown(player){
             document.getElementById("seat_list").innerHTML += template("seat-html", {content:player});
-            if(parse.content.user.id != [[${session.user.id}]]){
+            if(player.user.id != [[${session.user.id}]]){
                 document.getElementById("pre-half").innerHTML += template("pre-half-html",{user:player.user});
                 document.getElementById("post-half").innerHTML += template("post-half-html",{user:player.user});
                 var idList = [];
                 for(var i=0; i<scoreIdList.length; i++){
-                    idList.push(scoreIdList[i] + "-" + parse.content.user.username);
+                    idList.push(scoreIdList[i] + "-" + player.user.username);
                 }
                 playerScoreIdList.push(idList);
             } else {
@@ -279,7 +288,7 @@
             }
         }
 
-        function populateScores(player){
+        function populateScores(player, ids){
             document.getElementById('number1').src = dicePicList[player.currentDices[0]-1];
             document.getElementById('number2').src = dicePicList[player.currentDices[1]-1];
             document.getElementById('number3').src = dicePicList[player.currentDices[2]-1];
@@ -300,10 +309,9 @@
                 document.getElementById(ids[12]).innerText = player.scores[12] + "/63";
             }
             document.getElementById(ids[14]).innerHTML = numberHtml(player.scores[14],numberUrlList);
-            playDice.innerText = "投掷骰子*" + player.playTimes;
         }
 
-        function populateSelectScores(scores){
+        function populateSelectScores(scores, ids){
             for (var i=0;i<scores.length;i++)
             {
                 //13奖励分不填出来
@@ -364,6 +372,17 @@
         function startGame(){
             document.getElementById("start-game").disabled = true;
             stompClient.send("/command",{}, JSON.stringify({'id': messageId, 'code': 104}));
+        }
+
+        function enable(scores, seat){
+            for (var i=0; i < 12; i++) {
+                if(scores[i] === -1){
+                    selectScore(i, playerScoreIdList[seat][i], seat);
+                }
+            }
+            for (var i=0; i < diceIdList.length; i++){
+                lockDice(i,diceIdList[i]);
+            }
         }
 
         function selectScore(index, id, seat){
