--- a/web/src/main/resources/templates/room.html
+++ b/web/src/main/resources/templates/room.html
@@ -76,31 +76,31 @@
             '/local/images/三点.png','/local/images/四点.png',
             '/local/images/五点.png','/local/images/六点.png'];
 
-        var numberUrlList = [
-            '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px;" alt="0">',
-            '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px;" alt="1">',
-            '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px;" alt="2">',
-            '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px;" alt="3">',
-            '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px;" alt="4">',
-            '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px;" alt="5">',
-            '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px;" alt="6">',
-            '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px;" alt="7">',
-            '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px;" alt="8">',
-            '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px;" alt="9">'
-        ];
+        // var numberUrlList = [
+        //     '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px;" alt="0">',
+        //     '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px;" alt="1">',
+        //     '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px;" alt="2">',
+        //     '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px;" alt="3">',
+        //     '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px;" alt="4">',
+        //     '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px;" alt="5">',
+        //     '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px;" alt="6">',
+        //     '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px;" alt="7">',
+        //     '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px;" alt="8">',
+        //     '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px;" alt="9">'
+        // ];
 
-        var numberSelectUrlList = [
-            '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="0">',
-            '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="1">',
-            '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="2">',
-            '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="3">',
-            '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="4">',
-            '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="5">',
-            '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="6">',
-            '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="7">',
-            '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="8">',
-            '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="9">'
-        ]
+        // var numberSelectUrlList = [
+        //     '<img class="img-fluid" src="/local/images/number-00.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="0">',
+        //     '<img class="img-fluid" src="/local/images/number-01.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="1">',
+        //     '<img class="img-fluid" src="/local/images/number-02.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="2">',
+        //     '<img class="img-fluid" src="/local/images/number-03.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="3">',
+        //     '<img class="img-fluid" src="/local/images/number-04.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="4">',
+        //     '<img class="img-fluid" src="/local/images/number-05.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="5">',
+        //     '<img class="img-fluid" src="/local/images/number-06.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="6">',
+        //     '<img class="img-fluid" src="/local/images/number-07.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="7">',
+        //     '<img class="img-fluid" src="/local/images/number-08.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="8">',
+        //     '<img class="img-fluid" src="/local/images/number-09.png" style="height: 10px; width: 10px; -webkit-filter: invert(100%)" alt="9">'
+        // ]
 
         var diceTaskId = null;
 
@@ -301,9 +301,10 @@
             {
                 var elementById1 = document.getElementById(ids[i]);
                 if(player.scores[i] === -1){
-                    elementById1.innerHTML = numberHtml(player.currentScores[i], numberSelectUrlList);
+                    elementById1.innerHTML = player.currentScores[i];
+                    elementById1.style.color = "red";
                 } else {
-                    elementById1.innerHTML = numberHtml(player.scores[i], numberUrlList);
+                    elementById1.innerHTML = player.scores[i];
                 }
             }
             if(player.scores[13] === 35){
@@ -311,7 +312,7 @@
             } else {
                 document.getElementById(ids[12]).innerText = player.scores[12] + "/63";
             }
-            document.getElementById(ids[14]).innerHTML = numberHtml(player.scores[14],numberUrlList);
+            document.getElementById(ids[14]).innerHTML = player.scores[14];
         }
 
         function populateSelectScores(scores, ids){
@@ -320,6 +321,7 @@
                 //13奖励分不填出来
                 if(i != 13){
                     var elementById1 = document.getElementById(ids[i]);
+                    elementById1.style.color = "black";
                     if(scores[i] === -1){
                         elementById1.innerHTML = "-";
                     } else {
@@ -330,33 +332,33 @@
                                 elementById1.innerHTML = scores[i] + "/63";
                             }
                         } else {
-                            elementById1.innerHTML = numberHtml(scores[i], numberUrlList);
+                            elementById1.innerHTML = scores[i];
                         }
                     }
                 }
             }
         }
 
-        function numberHtml(score, urlList){
-            var ones = parseInt(score % 10);
-            var tens = Math.trunc(score / 10);
-            if(tens >= 10){
-                tens = parseInt(tens % 10);
-            }
-            var hundreds = parseInt(score / 100);
-            var html = "";
-            if(hundreds != 0){
-                html += urlList[hundreds];
-                if(tens === 0){
-                    html += urlList[tens];
-                }
-            }
-            if(tens != 0){
-                html += urlList[tens];
-            }
-            html += urlList[ones];
-            return html;
-        }
+        // function numberHtml(score, urlList){
+        //     var ones = parseInt(score % 10);
+        //     var tens = Math.trunc(score / 10);
+        //     if(tens >= 10){
+        //         tens = parseInt(tens % 10);
+        //     }
+        //     var hundreds = parseInt(score / 100);
+        //     var html = "";
+        //     if(hundreds != 0){
+        //         html += urlList[hundreds];
+        //         if(tens === 0){
+        //             html += urlList[tens];
+        //         }
+        //     }
+        //     if(tens != 0){
+        //         html += urlList[tens];
+        //     }
+        //     html += urlList[ones];
+        //     return html;
+        // }
 
         function disconnect() {
             if (stompClient != null) {
@@ -552,7 +554,7 @@
                         <td style="text-align: center;" colspan="2"><img id="number5" class="img-fluid" src="/local/images/六点.png" style="height: 40px;" alt="6"></td>
                     </tr>
                 </table>
-                <button id="playDice" onclick="playDice()" class="badge badge-soft-success badge-pill badge-lg" disabled>
+                <button id="playDice" onclick="playDice()" class="btn btn-success" disabled>
                     投掷骰子
                 </button>
             </div>
